--- a/www/client.html
+++ b/www/client.html
@@ -79,7 +79,7 @@ access to use this app.
 
         <div id="leftButtons">
             <button id="shareRoomBtn" class="fas fa-users"></button>
-            <a href="https://nightwalker110.github.io/OnlineCompiler/" target="_blank"><button id="compiler" class="fa fa-laptop"></button></a>
+            <a href="https://github.com/Hangain/Hangain-Compiler" target="_blank"><button id="compiler" class="fa fa-laptop"></button></a>
             <button id="audioBtn" class="fas fa-microphone"></button>
             <button id="videoBtn" class="fas fa-video"></button>
             <button id="swapCameraBtn" class="fas fa-sync-alt"></button>
