--- a/www/permission.html
+++ b/www/permission.html
@@ -36,7 +36,7 @@
             content="Hangain calling provides real-time HD quality and latency simply not available with traditional technology."
         />
         <meta property="og:image" content="/images/preview.png" />
-        <meta property="og:url" content="https://Hangain.herokuapp.com/" />
+        <meta property="og:url" content="https://hangain.herokuapp.com/" />
 
         <!-- StyleSheet -->
 
@@ -124,9 +124,9 @@
                             <div class="brand">
                                 <a href="/"><img src="images/log.png" alt="Neon" width="32" height="32" /></a>
                             </div>
-                         <!--    <div class="footer-social">
+                             <div class="footer-social">
                                 <div>
-                                    <a target="_blank" href="https://github.com/miroslavpejic85/Hangain">
+                                    <a target="_blank" href="https://github.com/">
                                         <svg
                                             width="16"
                                             height="16"
@@ -140,7 +140,7 @@
                                         </svg>
                                     </a>
                                 </div>
-                            </div> -->
+                            </div> 
                         </div>
                         <div class="footer-bottom space-between text-xxs invert-order-desktop">
                             <nav class="footer-nav">
@@ -149,8 +149,8 @@
                                         <a href="/privacy">Privacy Policy</a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="https://www.linkedin.com/in/miroslav-pejic-976a07101/"
-                                            >Made with ❤️ by Miroslav Pejic</a
+                                        <a target="_blank" href=""
+                                            >Made with ❤️ by JS</a
                                         >
                                     </li>
                                 </ul>
