--- a/www/client.html
+++ b/www/client.html
@@ -12,7 +12,7 @@
             gtag('js', new Date());
 
             gtag('config', 'G-3XM60XK9RQ');
-        </script>npm
+        </script>
 
         <!-- Title and Icon -->
 
@@ -43,7 +43,7 @@
         <meta property="og:title" content="Click the link to join this call." />
         <meta property="og:description" content="Free WebRTC browser-based video call." />
         <meta property="og:image" content="/images/Hangain.png" />
-        <meta property="og:url" content="https://Hangain.herokuapp.com/" />
+        <meta property="og:url" content="https://hangain.herokuapp.com/" />
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png" />
 
         <!-- StyleSheet -->
