--- a/www/newcall.html
+++ b/www/newcall.html
@@ -16,7 +16,7 @@
 
         <!-- Title and Icon -->
 
-        <title>Hangain ~ Create your Room name and start the new call.</title>
+        <title>Hangain</title>
         <link rel="shortcut icon" href="images/log.png" />
         <link rel="apple-touch-icon" href="images/log.png" />
 
@@ -38,14 +38,14 @@
         <!-- https://ogp.me -->
 
         <meta property="og:type" content="app-webrtc" />
-        <meta property="og:site_name" content="Hangain" />
+        <meta property="og:site_name" content="MiroTalk" />
         <meta property="og:title" content="Click the link to make a call." />
         <meta
             property="og:description"
             content="Hangain calling provides real-time HD quality and latency simply not available with traditional technology."
         />
         <meta property="og:image" content="/images/preview.png" />
-        <meta property="og:url" content="https://Hangain.herokuapp.com/" />
+        <meta property="og:url" content="https://hangain.herokuapp.com/" />
 
         <!-- StyleSheet -->
 
