--- a/www/client.html
+++ b/www/client.html
@@ -42,9 +42,9 @@
         <meta property="og:site_name" content="Hangain" />
         <meta property="og:title" content="Click the link to join this call." />
         <meta property="og:description" content="Free WebRTC browser-based video call." />
-        <meta property="og:image" content="/images/Hangain.png" />
+        <meta property="og:image" content="/images/log.png" />
         <meta property="og:url" content="https://hangain.herokuapp.com/" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/log.png" />
 
         <!-- StyleSheet -->
 
