--- a/www/client.html
+++ b/www/client.html
@@ -16,7 +16,7 @@
 
         <!-- Title and Icon -->
 
-        <title>HANGAIN</title>
+        <title>Hangain</title>
         <link rel="shortcut icon" href="images/log.png" />
         <link rel="apple-touch-icon" href="images/log.png" />
 
