--- a/www/newcall.html
+++ b/www/newcall.html
@@ -155,7 +155,7 @@
                                         <a href="/privacy">Privacy Policy</a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="https://www.linkedin.com/in/miroslav-pejic-976a07101/"
+                                        <a target="_blank" href=""
                                             >Made with ❤️ by JS</a
                                         >
                                     </li>
